--- a/assets/css/sass/base/base/typo.scss
+++ b/assets/css/sass/base/base/typo.scss
@@ -1,24 +1,24 @@
 select {
-    border: 1px solid #e8e8e8;
+    border: 1px solid #ccc;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
     max-width: 100%;
     &:-moz-focusring{
     	color: $tr;
-    	text-shadow: 0 0 0 #e8e8e8;
+    	text-shadow: 0 0 0 #ccc;
     }
 }
 
 input{
-    border: 1px solid #e8e8e8;
+    border: 1px solid #ccc;
     &[type=search] {
         -webkit-appearance: none;
     }
 }
 
 textarea{
-	border: 1px solid #e8e8e8;
+	border: 1px solid #ccc;
 }
 
 input,
@@ -37,7 +37,7 @@ button{
     -webkit-appearance: none;
     cursor: pointer;
     padding: 0;
-    border: 1px solid #e8e8e8;
+    border: 1px solid #ccc;
 
     &.disabled,
     &:disabled{
