WOOSTIFY-184 #comment add multi step checkout option #done

--- a/assets/css/sass/woocommerce/account-page.scss
+++ b/assets/css/sass/woocommerce/account-page.scss
@@ -151,6 +151,12 @@
 	        }
 	    }
 
+	    &--tinv_wishlist {
+	    	a:before{
+	            content: "\e634";
+	        }
+	    }
+
         a{
             font-size: 15px;
             @include flex( flex, flex-start, center );
