--- a/assets/css/sass/woocommerce/cart-page.scss
+++ b/assets/css/sass/woocommerce/cart-page.scss
@@ -234,7 +234,7 @@
 			font-weight: 600;
 			font-size: 12px;
 			text-transform: uppercase;
-			border-bottom: 1px solid #e8e8e8;
+			border-bottom: 1px solid #ccc;
 			height: 30px;
 			padding: 0 10px;
 			border-radius: 0;
@@ -321,8 +321,8 @@
 	}
 
 	.clear-cart-btn {
-		height: 48px;
-		line-height: 48px;
+		height: 40px;
+		line-height: 40px;
 		display: inline-block;
 		padding-top: 0;
 		padding-bottom: 0;
