--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -399,8 +399,9 @@ $size: 40px;
 }
 
 // remove overlay woocommerce
-.blockUI.blockOverlay {
+.blockUI {
 	background-color: $tr $i;
+	display: none $i;
 }
 
 // store notice
@@ -623,6 +624,12 @@ $size: 40px;
 		}
 	}
 
+	.loop-add-to-cart-icon-btn+.added_to_cart {
+		&:before {
+			margin-right: 0;
+		}
+	}
+
 	.loop-add-to-cart-icon-btn {
 		&.added {
 			display: none;
@@ -732,26 +739,37 @@ $size: 40px;
 	border-radius: 0 !important;
 	opacity: 0;
 	visibility: hidden;
-	@include translatey( 100% );
+	@include translatey(100%);
 }
-@media ( max-width: $screen-sm - 1 ) {
+
+@media (max-width: $screen-sm - 1) {
 	.scrolling-up {
 		&.has-proceed-sticky-button {
 			.wc-proceed-to-checkout .button {
-				@include translatey( 100% );
+				@include translatey(100%);
 			}
 		}
 
 		&.has-order-sticky-button {
 			#place_order {
-				@include translatey( 100% );
+				@include translatey(100%);
+			}
+
+			&.has-multi-step-checkout {
+				.multi-step-checkout-button-wrapper {
+					.multi-step-checkout-button[data-action="continue"],
+					.multi-step-checkout-button[data-action="place_order"] {
+						@include translatey(100%);
+					}
+				}
 			}
 		}
 	}
+
 	.scrolling-down {
 		&.has-proceed-sticky-button {
 			.wc-proceed-to-checkout .button {
-				@include translatey( 0 );
+				@include translatey(0);
 				opacity: 1;
 				visibility: visible;
 			}
@@ -759,145 +777,49 @@ $size: 40px;
 
 		&.has-order-sticky-button {
 			#place_order {
-				@include translatey( 0 );
+				@include translatey(0);
 				opacity: 1;
 				visibility: visible;
 			}
+
+			&.has-multi-step-checkout {
+				.multi-step-checkout-button-wrapper {
+					.multi-step-checkout-button[data-action="continue"],
+					.multi-step-checkout-button[data-action="place_order"] {
+						@include translatey(0);
+						opacity: 1;
+						visibility: visible;
+					}
+				}
+			}
 		}
 	}
-	// Sticky single add to cart button
+
+	// Sticky Single add to cart button
 	.has-proceed-sticky-button {
 		.wc-proceed-to-checkout .button {
 			@include fixed();
 		}
 	}
 
-	// Sticky place order button
+	// Sticky Place order button
 	.has-order-sticky-button {
 		#place_order {
 			@include fixed();
 			line-height: normal;
 		}
-	}
-}
 
-// Multi step checkout
-.multi-step-inner {
-	margin-top: 50px;
-	counter-reset: multi-step-checkout;
-	@extend .flex;
-
-	.multi-step-item {
-		position: relative;
-		margin: 0 12px;
-		height: 70px;
-		width: calc( ( 100% - 24px ) / 3 );
-		text-align: center;
-		color: #fff;
-		@extend .flex;
-
-		&:first-child {
-			margin-left: 0;
-
-			&:before,
-			&:after {
-				left: 50%;
-				right: -15px;
-			}
-		}
-
-		&:last-child {
-			margin-right: 0;
-
-			&:before,
-			&:after {
-				right: 50%;
-				left: -15px;
-			}
-		}
-
-		@media (min-width: $screen-md) {
-			&:not(:first-child):not(:last-child) {
-				background-color: transparent;
-			}
-		}
-
-		&:before {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-			height: 50%;
-    		transform: skew(40deg);
-		}
-
-		&:after {
-			content: '';
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			height: 50%;
-    		transform: skew(-40deg);
-		}
-
-		@media (max-width: $screen-md - 1) {
-			&:not(.active) {
-				display: none;
-			}
-
-			&.active {
-				margin: 0;
-				width: 100%;
-				height: 60px;
-
-				&:before,
-				&:after {
-					content: none;
+		&.has-multi-step-checkout {
+			.multi-step-checkout-button-wrapper {
+				.multi-step-checkout-button[data-action="continue"],
+				.multi-step-checkout-button[data-action="place_order"] {
+					@include fixed();
+					text-align: center;
+					height: 50px;
+					line-height: 50px;
+					padding-top: 0;
+					padding-bottom: 0;
 				}
-			}
-		}
-	}
-
-	.item-text {
-		position: relative;
-		z-index: 5;
-		font-size: 1.2em;
-
-		&:before {
-			@media (min-width: $screen-md) {
-				content: counter(multi-step-checkout, decimal);
-				counter-increment: multi-step-checkout;
-			}
-			margin-right: 10px;
-			border: 1px solid #fff;
-			padding: 10px;
-			border-radius: 50px;
-			width: 30px;
-			height: 30px;
-			white-space: nowrap;
-			font-size: 0.9em;
-			@extend .inline-flex;
-		}
-	}
-
-	.active {
-		color: #fff;
-
-		~ .multi-step-item {
-			background-color: #eee;
-			color: #333;
-
-			.item-text {
-				&:before {
-					border-color: #333;
-				}
-			}
-
-			&:before,
-			&:after {
-				background-color: #eee;
 			}
 		}
 	}
