WOOSTIFY-225 #comment update menu style for sidebar menu #done

--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -177,7 +177,7 @@
 					}
 				}
 
-				> li {
+				> .menu-item {
 					ul {
 						&:not(.sub-mega-menu) {
 							opacity: 1;
@@ -225,7 +225,7 @@
 			}
 		}
 
-		>li {
+		> .menu-item {
 			display: block;
 
 			&.current-menu-ancestor,
